# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.14 2004/11/06 22:23:03 port001 Exp $

06 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Fixed dynamic module loading in the index file (NOTE: This method
   assigns the class object to the module name, not the module object to
   module name.)
 * admin/Page_Main.py converted to the new style
 * Updated URLs in the admin header

05 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * We now have only one index to handle both user and admin modules,
   also introduced the concept of domains to distingusih between the two.
   URL for the admin section should now read: index.py?domain=admin&page=foo

04 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Converted the main index into a class
 * Tiny fixes
 * 

04 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Moved the session checking code from Page_Login._check_session into
   the index files. 
 * site modules now accept any number of arguments from the index. This
   saves us performing duplicate queries. admin modules and index not yet
   converted.
 * Minor changes.

03 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Moved login form out of the Header and into it's own page. Header executing
   code = bad. Still needs work.    
 * Bug fixes.

28 Oct 2004; Scott Hadfield <hadfield@gentoo.org>:
 * Added a status (draft, pending, published) field to the subscript table.
 * A little more exception handling code.
 * Bug fixes.

29 Sep 2004; Scott Hadfield <hadfield@gentoo.org>:
 * Removed the error reporting code from the non-admin interface to make it
	easier to work with for now.
 * Changed the index.py quite a bit. Hopefully for the better :-).
 * Redesigned the non-admin interface because it was getting extremely
	difficult to work with.
 * Implemented basic commenting
 * You can now view scripts, view your scripts, create a new script,
	add comments to scripts.
 * Added TODO file.