@@ -2,7 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.14 2004/11/06 22:23:03 port001 Exp $
+# $Id: ChangeLog,v 1.15 2004/11/07 21:10:35 port001 Exp $
+
+07 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * Basic access control for the admin section.
+ * Minor fixes
 
 06 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Fixed dynamic module loading in the index file (NOTE: This method
